@@ -35,12 +35,14 @@
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
 			<version>2.9.6</version>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>org.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
 			<version>1.25</version>
 			<scope>test</scope>
 		</dependency>
+	-->
 	</dependencies>
 	<build>
 		<testResources>
@@ -109,11 +111,16 @@
 					</archive>
 				</configuration>
 			</plugin>
+			<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M3</version>
-			</plugin>
+				<configuration>
+                    <argLine>
+                        -Djdk.attach.allowAttachSelf 
+                    </argLine>
+			</plugin> -->
 			<plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
